@@ -1,6 +1,5 @@
 import logging
 
-from Acquisition.interfaces import IAcquirer
 import Missing
 from zope.interface import implements
 from zope.component import getMultiAdapter
@@ -8,15 +7,8 @@ from zope.component import getMultiAdapter
 from zope.schema.interfaces import IContextSourceBinder
 from zope.schema.vocabulary import SimpleTerm
 
-from zope.app.component.hooks import getSite
-try:
-    from zope.globalrequest import getRequest
-    getRequest  # pyflakes
-except ImportError:
-    # Fake it
-    getRequest = object
-
 from plone.app.layout.navigation.interfaces import INavigationQueryBuilder
+from plone.app.layout.navigation.root import getNavigationRootObject
 from plone.app.vocabularies.catalog import parse_query
 
 from Products.CMFCore.utils import getToolByName
@@ -24,6 +16,7 @@ from Products.ZCTextIndex.ParseTree import ParseError
 
 from plone.formwidget.contenttree.interfaces import IContentSource
 from plone.formwidget.contenttree.interfaces import IContentFilter
+from plone.formwidget.contenttree.utils import closest_content
 
 from OFS.interfaces import ITraversable
 
@@ -73,8 +66,8 @@ class PathSource(object):
 
     def __init__(self, context, selectable_filter, navigation_tree_query=None):
         self.context = context
-
-        query_builder = getMultiAdapter((context, self),
+        nav_root = getNavigationRootObject(context, None)
+        query_builder = getMultiAdapter((nav_root, self),
                                         INavigationQueryBuilder)
         query = query_builder()
 
@@ -239,7 +232,7 @@ class PathSourceBinder(object):
 
     def __call__(self, context):
         return self.path_source(
-            self._find_page_context(context),
+            closest_content(context),
             selectable_filter=self.selectable_filter,
             navigation_tree_query=self.navigation_tree_query)
 
@@ -247,28 +240,6 @@ class PathSourceBinder(object):
         # If used without being properly bound (looks at DataGridField), bind
         # now and pass through to the bound version
         return self(None).__contains__(value)
-
-    def _find_page_context(self, given_context=None):
-        """Try to find a usable context, with increasing agression"""
-        # Normally, we should be given a useful context (e.g the page)
-        c = given_context
-        if IAcquirer.providedBy(c):
-            return c
-        # Subforms (e.g. DataGridField) may not have a context set, find out
-        # what page is being published
-        c = getattr(getRequest(), 'PUBLISHED', None)
-        if IAcquirer.providedBy(c):
-            return c
-        # During widget traversal nothing is being published yet, use getSite()
-        c = getSite()
-        if IAcquirer.providedBy(c):
-            return c
-        # During kss_z3cform_inline_validation, PUBLISHED and getSite() return
-        # a Z3CFormValidation object. What we want is it's context.
-        c = getattr(getattr(getRequest(), 'PUBLISHED', None), 'context', None)
-        if IAcquirer.providedBy(c):
-            return c
-        raise ValueError('Cannot find suitable context to bind to source')
 
 
 class ObjPathSourceBinder(PathSourceBinder):
