@@ -4,6 +4,9 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
+* Ensure context is a content item of some sort.
+  [elro]
+
 * Import getSite from zope.component to avoid dependency on zope.app.component.
   [hvelarde]
 
